--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sanrenjz-tools",
   "version": "1.0.0",
-  "description": "三人聚智工具 - 基于JavaScript的插件平台",
+  "description": "三人聚智效率工具 - 基于JavaScript的插件平台",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -45,22 +45,12 @@
   },
   "build": {
     "appId": "com.sanrenjz.tools",
-    "productName": "三人聚智工具",
+    "productName": "三人聚智效率工具",
     "directories": {
       "output": "dist"
     },
-<<<<<<< HEAD
     "asar": true,
     "compression": "maximum",
-    "files": [
-      "main.js",
-      "index.html",
-      "search-window.html",
-      "super-panel.html",
-      "assets/**/*",
-      "node_modules/**/*",
-      "package.json"
-=======
     "files": [
       "**/*",
       "!node_modules",
@@ -78,8 +68,16 @@
         "from": "app",
         "to": "app",
         "filter": ["**/*"]
+      },
+      {
+        "from": "build",
+        "to": "build",
+        "filter": [
+          "icon.ico",
+          "icon.icns",
+          "icon.png"
+        ]
       }
->>>>>>> 1e496283fea0ca958cc9fa10b800b56996f77a45
     ],
     "win": {
       "target": [
@@ -89,7 +87,6 @@
         }
       ],
       "icon": "build/icon.ico",
-<<<<<<< HEAD
       "requestedExecutionLevel": "asInvoker",
       "artifactName": "${productName}-${version}-win-${arch}.${ext}"
     },
@@ -99,20 +96,21 @@
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "allowElevation": false,
+      "shortcutName": "三人聚智效率工具",
       "installerIcon": "build/icon.ico",
       "uninstallerIcon": "build/icon.ico",
+      "installerHeaderIcon": "build/icon.ico",
       "installerLanguages": ["zh_CN", "en_US"],
-      "language": "2052"
-=======
-      "requestedExecutionLevel": "asInvoker"
->>>>>>> 1e496283fea0ca958cc9fa10b800b56996f77a45
+      "language": "2052",
+      "deleteAppDataOnUninstall": false,
+      "runAfterFinish": true,
+      "artifactName": "${productName}-${version}-${arch}.${ext}"
     },
     "mac": {
       "target": [
         {
           "target": "dmg",
           "arch": ["x64", "arm64"]
-<<<<<<< HEAD
         },
         {
           "target": "zip",
@@ -128,96 +126,13 @@
       "artifactName": "${productName}-${version}-mac-${arch}.${ext}"
     },
     "dmg": {
-      "title": "三人聚智工具",
-      "background": "build/background.png",
+      "title": "三人聚智效率工具",
+      "icon": "build/icon.icns",
+      "background": "build/dmg-background.png",
       "window": {
         "width": 540,
         "height": 380
       },
-      "contents": [
-        {
-          "x": 410,
-          "y": 230,
-          "type": "link",
-          "path": "/Applications"
-        },
-        {
-          "x": 130,
-          "y": 230,
-          "type": "file"
-        }
-      ]
-=======
-        }
-      ],
-      "icon": "build/icon.icns",
-      "category": "public.app-category.productivity",
-      "entitlements": "build/entitlements.mac.plist",
-      "entitlementsInherit": "build/entitlements.mac.plist"
->>>>>>> 1e496283fea0ca958cc9fa10b800b56996f77a45
-    },
-    "linux": {
-      "target": [
-        {
-<<<<<<< HEAD
-          "target": "tar.gz",
-          "arch": ["x64"]
-        }
-      ],
-      "category": "Utility",
-      "icon": "build/icon.png",
-      "artifactName": "${productName}-${version}-linux-${arch}.${ext}",
-      "desktop": {
-        "Name": "三人聚智工具",
-        "Comment": "基于JavaScript的插件平台",
-        "Categories": "Utility;Development;"
-      }
-    },
-    "extraResources": [
-      {
-        "from": "app",
-        "to": "app",
-        "filter": [
-          "**/*",
-          "!**/*.map",
-          "!**/__pycache__/**"
-        ]
-      },
-      {
-        "from": "build",
-        "to": "build",
-        "filter": [
-          "icon.ico",
-          "icon.icns",
-          "icon.png"
-        ]
-      }
-    ],
-=======
-          "target": "AppImage",
-          "arch": ["x64"]
-        }
-      ],
-      "icon": "build/icon.png",
-      "category": "Utility"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "三人聚智工具",
-      "installerIcon": "build/icon.ico",
-      "uninstallerIcon": "build/icon.ico",
-      "installerHeaderIcon": "build/icon.ico",
-      "deleteAppDataOnUninstall": false,
-      "runAfterFinish": true,
-      "artifactName": "${productName}-${version}-${arch}.${ext}"
-    },
-    "dmg": {
-      "title": "三人聚智工具",
-      "icon": "build/icon.icns",
-      "background": "build/dmg-background.png",
       "contents": [
         {
           "x": 130,
@@ -229,26 +144,36 @@
           "type": "link",
           "path": "/Applications"
         }
+      ]
+    },
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64"]
+        },
+        {
+          "target": "tar.gz",
+          "arch": ["x64"]
+        }
       ],
-      "window": {
-        "width": 540,
-        "height": 380
+      "category": "Utility",
+      "icon": "build/icon.png",
+      "artifactName": "${productName}-${version}-linux-${arch}.${ext}",
+      "desktop": {
+        "Name": "三人聚智效率工具",
+        "Comment": "基于JavaScript的插件平台",
+        "Categories": "Utility;Development;"
       }
     },
->>>>>>> 1e496283fea0ca958cc9fa10b800b56996f77a45
     "publish": {
       "provider": "github",
       "owner": "yuhanbo758",
       "repo": "sanrenjz-tools"
     }
-<<<<<<< HEAD
-  }
-}
-=======
   },
   "homepage": "https://github.com/yuhanbo758/sanrenjz-tools",
   "bugs": {
     "url": "https://github.com/yuhanbo758/sanrenjz-tools/issues"
   }
 }
->>>>>>> 1e496283fea0ca958cc9fa10b800b56996f77a45
