--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "compression": "maximum",
     "files": [
       "**/*",
-      "!node_modules",
+      "!node_modules/**/*",
+      "node_modules/@electron/remote/**/*",
       "!dist",
       "!build-output",
       "!*.log",
@@ -62,6 +63,9 @@
       "!settings.json",
       "!plugin-data",
       "!user-data"
+    ],
+    "asarUnpack": [
+      "node_modules/@electron/remote/**/*"
     ],
     "extraResources": [
       {
